--- a/tests/sampleFiles/index.html
+++ b/tests/sampleFiles/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="../../src/css/spark.css">
   </head>
   <body>
-<div class="flex flex-col sm:flex-row md:justify-between lg:space-x-4">
-    <div class="p-4 bg-accent text-primary">Item 1</div>
-    <div class="p-4 bg-accent text-primary">Item 2</div>
-    <div class="p-4 bg-accent text-primary">Item 3</div>
-</div>
+    <div>
+      <h2>Hello World</h2>
+    </div>
   </body>
 </html>
