Working on variable change

--- a/tests/sampleFiles/index.html
+++ b/tests/sampleFiles/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="../../src/css/spark.css">
+    <link rel="stylesheet" href="./tests/ouput.css">
   </head>
   <body>
     <div>
-      <h2>Hello World</h2>
+      <h2 class="flex justify-start flex-wrap">Hello World</h2>
     </div>
   </body>
 </html>
